@@ -39,6 +39,7 @@
     - Localization tweaks: "can not" -> "cannot" and "file name" -> "filename"
     - Bugfix: When reconfiguring the BibTeX key generator, changes are applied instantly without requiring a restart of JabRef
     - BREAKING: The BibTeX key generator settings from previous versions are lost
+    - BREAKING: LabelPatterns [auth.etal], [authEtAl], [authors], [authorsN] to omit spaces and commas (and work as described at http://jabref.sourceforge.net/help/LabelPatterns.php)
 [dev_2.11]
     - Backports from 2.80: Fix bug #194: JabRef starts again on Win XP and Win Vista
     - Backports from 2.80: Fixes #103: JDialog for auto set links is openend and closed correctly
